fixed link generation

--- a/result_server/templates/_results_table.html
+++ b/result_server/templates/_results_table.html
@@ -16,7 +16,7 @@
                 {% if key in ["json_link", "data_link"] %}
                     <td>
                         {% if row[key] %}
-                            <a href="/results/{{ row[key] }}">
+                            <a href="{{ row[key] }}">
                                 {{ "json" if key == "json_link" else "data" }}
                             </a>
                         {% else %}
