Add Miyabi-G and Miyabi-C hardware specifications to hard_env.html

--- a/result_server/templates/hard_env.html
+++ b/result_server/templates/hard_env.html
@@ -65,6 +65,26 @@
            <td>4</td>
          </tr>
       {% endif %}
+      {% if sys == 'Miyabi-G' %}
+         <tr>
+           <td>Miyabi-G</td>
+           <td>NVIDIA Grace CPU</td>
+           <td>1</td>
+           <td>72</td>
+           <td>NVIDIA Hopper H100 GPU</td>
+           <td>1</td>
+         </tr>
+      {% endif %}
+      {% if sys == 'Miyabi-C' %}
+         <tr>
+           <td>Miyabi-C</td>
+           <td>Intel Xeon Max 9480</td>
+           <td>2</td>
+           <td>112</td>
+           <td>-</td>
+           <td>-</td>
+         </tr>
+      {% endif %}
  <!--
  #
  # Copy the template below and add a new item.
