Fix hardware specifications in hard_env.html

--- a/result_server/templates/hard_env.html
+++ b/result_server/templates/hard_env.html
@@ -65,9 +65,9 @@
            <td>4</td>
          </tr>
       {% endif %}
-      {% if sys == 'Miyabi-G' %}
+      {% if sys == 'MiyabiG' %}
          <tr>
-           <td>Miyabi-G</td>
+           <td>MiyabiG</td>
            <td>NVIDIA Grace CPU</td>
            <td>1</td>
            <td>72</td>
@@ -75,9 +75,9 @@
            <td>1</td>
          </tr>
       {% endif %}
-      {% if sys == 'Miyabi-C' %}
+      {% if sys == 'MiyabiC' %}
          <tr>
-           <td>Miyabi-C</td>
+           <td>MiyabiC</td>
            <td>Intel Xeon Max 9480</td>
            <td>2</td>
            <td>112</td>
