Add comprehensive tooltips for all table headers including Timestamp and FOM version

--- a/result_server/templates/_results_table.html
+++ b/result_server/templates/_results_table.html
@@ -5,17 +5,33 @@
         {% for col_name, _ in columns %}
            {% if col_name in ["Timestamp", "SYSTEM", "CODE", "FOM", "FOM version", "Exp", "Nodes", "JSON", "PA Data"] %}
               <th>
-                {% if col_name == "SYSTEM" %}
+                {% if col_name == "Timestamp" %}
                   <span class="tooltip">{{ col_name }}
-                    <span class="tooltiptext">Computing system name. Click for hardware details</span>
+                    <span class="tooltiptext">Date and time when benchmark execution completed and results were automatically submitted to server</span>
+                  </span>
+                {% elif col_name == "SYSTEM" %}
+                  <span class="tooltip">{{ col_name }}
+                    <span class="tooltiptext">Computing system name</span>
                   </span>
                 {% elif col_name == "FOM" %}
                   <span class="tooltip">{{ col_name }}
-                    <span class="tooltiptext">Figure of Merit - Benchmark performance metric value</span>
+                    <span class="tooltiptext">Figure of Merit - Benchmark performance metric value, typically elapsed time in seconds for main section</span>
                   </span>
                 {% elif col_name == "Exp" %}
                   <span class="tooltip">{{ col_name }}
                     <span class="tooltiptext">Experimental conditions and parameter settings</span>
+                  </span>
+                {% elif col_name == "JSON" %}
+                  <span class="tooltip">{{ col_name }}
+                    <span class="tooltiptext">Detailed benchmark results in JSON format</span>
+                  </span>
+                {% elif col_name == "FOM version" %}
+                  <span class="tooltip">{{ col_name }}
+                    <span class="tooltiptext">Version identifier for the FOM measurement section - helps identify which code region was measured when users modify the timing boundaries</span>
+                  </span>
+                {% elif col_name == "PA Data" %}
+                  <span class="tooltip">{{ col_name }}
+                    <span class="tooltiptext">Performance Analysis data archive (detailed profiling data)</span>
                   </span>
                 {% else %}
                   {{ col_name }}
