Add common navigation bar to improve page accessibility

--- a/result_server/templates/results.html
+++ b/result_server/templates/results.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+{% include "_navigation.html" %}
+
 <h1>Results</h1>
 <input type="text" id="filterInput" onkeyup="filterTable()" placeholder="Search by multiple keywords...">
 <br><br>
